# networks

lab1/: AnalyzerArgs.h  CMakeLists.txt  GeneratorUniqueId.h  StringProcessing.h  UdpMulticast.cpp  UdpMulticast.h  UserData.h  UsersDataCollection.cpp  UsersDataCollection.h  main.cpp
lab2/: build.gradle.kts  settings.gradle.kts
lab2/src/main/kotlin/client/: FileSender.kt  Start.kt
lab2/src/main/kotlin/server/: FileExchange.kt  Main.kt
lab3/: pom.xml
lab3/src/main/java/: module-info.java
lab3/src/main/java/com/kurgin/locationinformation/locationinformation/: ReceivingDescriptionPlace.java  ReceivingInterestingPlaces.java  ReceivingPlace.java  ReceivingWeather.java  URLtoString.java  Worker.java
lab3/src/main/java/com/kurgin/locationinformation/locationinformation/API/: Description.java  InterestingPlaces.java  Place.java  Weather.java
lab3/src/main/java/com/kurgin/locationinformation/locationinformation/URL/: CreatureURLforInterestingPlaces.java  CreatureURLforPlace.java  CreatureURlForDescription.java  СreatureURL.java
lab3/src/main/java/com/kurgin/locationinformation/locationinformation/VC/: Main.java
lab4/: build.gradle  settings.gradle
lab4/src/main/java/: module-info.java
lab4/src/main/java/ru/nsu/org/main/lab4snake/: Main.java
lab4/src/main/proto/: snakes.proto
lab4/src/main/resources/: config.properties  logback.xml
lab5/: pom.xml
lab5/src/main/java/ru/nsu/lab5/: ClientConnection.java  Connection.java  DomainHandler.java  Handler.java  Main.java  OperationType.java  Proxy.java  Request.java  ServerConnection.java  ServerHandler.java
(+32 files in other folders)
